Add mobj info codogen.

--- a/ManagedDoomCodegen.csproj
+++ b/ManagedDoomCodegen.csproj
@@ -6,10 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Interactive" Version="4.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="orig\info.c">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="orig\info.h">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="orig\sounds.h">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
