--- a/ManagedDoomCodegen.csproj
+++ b/ManagedDoomCodegen.csproj
@@ -6,6 +6,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="orig\Keyboard.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="orig\Keyboard.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.Interactive" Version="4.0.0" />
   </ItemGroup>
 
